# e2p2

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
e2p2/cli/: main.py
e2p2/formula_detection/: task.py  yolo.py
e2p2/formula_recognition/: mfr.py  task.py  unimernet.py
e2p2/layout/: layout.py  task.py  yolo.py
e2p2/mfd/: task.py  yolo.py
e2p2/mfr/: task.py  unimernet.py
e2p2/mfr/config/: unimernet.yaml
e2p2/ocr/: ocr.py  paddle.py  task.py
e2p2/pdf/: pdf.py  rasterize.py
e2p2/table/: rapid_table.py  struct_eqtable.py  table.py  task.py
e2p2/utils/: image.py  visualize.py
notebooks/: Layout.ipynb
tests/ocr/: test_paddle.py
tests/pdf/: test_rasterize.py
